--- a/travel-app/src/components/Header/header.css
+++ b/travel-app/src/components/Header/header.css
@@ -24,15 +24,27 @@
 .nav a{
     text-decoration: none;
     margin: 0 15px;
-    padding: 6px;
+    padding: 8px 12px;
     border-radius: 10px;
     transition: .3s;
     color: #000;
     font-family: 'Kanit', sans-serif;
+    position: relative;
 }
 .nav a:hover{
     color: #fff;
     background-color: #3D8833;
+}
+.nav a span{
+    color: #fff;
+    background-color: #3D8833;
+    width: 12px;
+    align-items: center;
+    justify-content: center;
+    display: inline-flex;
+    position: absolute;
+    border-radius: 50%;
+    font-size: 10px;
 }
 @media screen and (max-width: 720px) {
     .container_header{
