--- a/travel-app/src/pages/Home/home.css
+++ b/travel-app/src/pages/Home/home.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Gugi&family=Kanit:wght@300&display=swap');
 
-
+.container_home{
+    
+    justify-content: center;
+}
 .container_home h1{
     text-transform: uppercase;
     text-align: center;
